[project]
name = "ai-tblb-assist"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn==1.3.1",
    "xgboost==1.7.4",
]

[dependency-groups]
dev = [
    "ipython>=8.35.0",
    "jupytext>=1.17.1",
    "notebook>=7.4.1",
]
